@@ -1,23 +1,22 @@
 package io.github.jhipster.sample.repository.search;
 
-import static org.elasticsearch.index.query.QueryBuilders.queryStringQuery;
+import static org.springframework.data.elasticsearch.client.elc.QueryBuilders.queryStringQuery;
 
+import co.elastic.clients.elasticsearch._types.query_dsl.QueryStringQuery;
 import io.github.jhipster.sample.domain.Operation;
 import io.github.jhipster.sample.repository.OperationRepository;
 import java.util.List;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import org.elasticsearch.search.sort.SortBuilder;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.elasticsearch.core.ElasticsearchRestTemplate;
+import org.springframework.data.elasticsearch.client.elc.ElasticsearchTemplate;
+import org.springframework.data.elasticsearch.client.elc.NativeQuery;
+import org.springframework.data.elasticsearch.client.elc.NativeQueryBuilder;
 import org.springframework.data.elasticsearch.core.SearchHit;
 import org.springframework.data.elasticsearch.core.SearchHits;
-import org.springframework.data.elasticsearch.core.query.NativeSearchQuery;
-import org.springframework.data.elasticsearch.core.query.NativeSearchQueryBuilder;
 import org.springframework.data.elasticsearch.core.query.Query;
 import org.springframework.data.elasticsearch.repository.ElasticsearchRepository;
 import org.springframework.scheduling.annotation.Async;
@@ -35,34 +34,43 @@ interface OperationSearchRepositoryInternal {
 
     Page<Operation> search(Query query);
 
+    @Async
     void index(Operation entity);
+
+    @Async
+    void deleteFromIndexById(Long id);
 }
 
 class OperationSearchRepositoryInternalImpl implements OperationSearchRepositoryInternal {
 
-    private final ElasticsearchRestTemplate elasticsearchTemplate;
+    private final ElasticsearchTemplate elasticsearchTemplate;
     private final OperationRepository repository;
 
-    OperationSearchRepositoryInternalImpl(ElasticsearchRestTemplate elasticsearchTemplate, OperationRepository repository) {
+    OperationSearchRepositoryInternalImpl(ElasticsearchTemplate elasticsearchTemplate, OperationRepository repository) {
         this.elasticsearchTemplate = elasticsearchTemplate;
         this.repository = repository;
     }
 
     @Override
     public Page<Operation> search(String query, Pageable pageable) {
-        NativeSearchQuery nativeSearchQuery = new NativeSearchQuery(queryStringQuery(query));
-        return search(nativeSearchQuery.setPageable(pageable));
+        NativeQuery nativeQuery = new NativeQuery(QueryStringQuery.of(qs -> qs.query(query))._toQuery());
+        return search(nativeQuery.setPageable(pageable));
     }
 
     @Override
     public Page<Operation> search(Query query) {
         SearchHits<Operation> searchHits = elasticsearchTemplate.search(query, Operation.class);
-        List<Operation> hits = searchHits.map(SearchHit::getContent).stream().collect(Collectors.toList());
+        List<Operation> hits = searchHits.map(SearchHit::getContent).stream().toList();
         return new PageImpl<>(hits, query.getPageable(), searchHits.getTotalHits());
     }
 
     @Override
     public void index(Operation entity) {
         repository.findOneWithEagerRelationships(entity.getId()).ifPresent(elasticsearchTemplate::save);
+    }
+
+    @Override
+    public void deleteFromIndexById(Long id) {
+        elasticsearchTemplate.delete(String.valueOf(id), Operation.class);
     }
 }
